Создал файл style.css, начал размечать блок Новинки - разметил левый .kvas-item;

--- a/index.html
+++ b/index.html
@@ -24,5 +24,29 @@
       </div>
     </div>
 
+
+    <div class="new-items">
+      <h2>Новинки</h2>
+      <div class="kvas-item">
+        <h3>Вахтёр</h3>
+        <img src="img/bottle-left.jpg" width="319" height="459" alt="Вахтёр">
+        <table class="kvas-value">
+          <tr>
+            <td>Алк.</td>
+            <td>&lt; 1%</td>
+          </tr>
+          <tr>
+            <td>Ккал</td>
+            <td>35</td>
+          </tr>
+        </table>
+        <p class="kvas-consist">Ржаной хлеб, Вода, Солод, Соль</p>
+        <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
+        <a class="btn" href="#">Подробнее</a>
+        <a class="btn" href="#">Купить</a>
+        <b>150 р.</b>
+      </div>
+    </div>
+
   </body>
 </html>
